Frontpage skeleton, login module

--- a/project/templates/base.html.twig
+++ b/project/templates/base.html.twig
@@ -23,6 +23,7 @@
 		{% block header %}{% endblock header %}
         {% block contents %}{% endblock contents %}
 		{% block footer %}{% endblock footer %}
+		{% block modals %}{% endblock modals %}
         {% block jslocal %}{% endblock jslocal %}
     </body>
 </html>
