--- a/project/templates/website.html.twig
+++ b/project/templates/website.html.twig
@@ -27,9 +27,9 @@
 			<a class="navbar-brand" href="{{path("homepage")}}">{{blog_name}}</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle menu"><i class="fa fa-bars"></i> <span class="sr-only">Menu</span></button>
 			<div class="collapse navbar-collapse" id="main-menu">
-				{{render(controller("App\\Controller\\HomeController::menu"))}}
+				{{render(controller("App\\Controller\\HomeController::menu", {routename: app.request.get("_route")}))}}
 				{% if logged and is_granted("ROLE_ADMIN") %}
-					<a href="#" class="btn btn-danger mr-2" title="Access administration dashboard"><i class="fa fa-lock"></i> Administration</a>
+					<a href="{{path("administration")}}" class="btn btn-danger mr-2" title="Access administration dashboard"><i class="fa fa-lock"></i> Admin Dashboard</a>
 				{% endif %}
 				{% if logged %}
 					<a href="{{path("app_logout")}}" class="btn btn-warning" title="Log out"><i class="fa fa-sign-out-alt"></i> Log out</a>
